2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/normal/menu_entry.c (run): Make sure we always return
	a value.

2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/efi/lsefimmap.c (grub_cmd_lsefimmap):
	NumberOfPages is UINT64 according to the UEFI specification, not
	UINTN.  Fix printf format.

2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/bus/usb/usbhub.c (poll_nonroot_hub): Change type of
	`err' to grub_usb_err_t.
	Reported and tested by: KESHAV P.R.

2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/efi/efidisk.c (grub_efidisk_get_device_name): Make
	tpart non-const, so that we can assign to it.  (Since this is a
	typedef, the constness refers to the pointer rather than what it
	points to.)

2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	* conf/Makefile.common (CPPFLAGS_GNULIB): Add
	$(top_srcdir)/grub-core/gnulib as well as
	$(top_builddir)/grub-core/gnulib.
	Reported by: KESHAV P.R.

2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.in: Fix the bootloader ID option to be
	consistently --bootloader-id, not --bootloader_id.
	Reported by: KESHAV P.R.

2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/hashsum.c (GRUB_MOD_INIT): Make "Compute or
	check hash checksum." consistently translatable.

2010-09-21  Yves Blusseau  <blusseau@zetam.org>

	* conf/Makefile.common (CPPFLAGS_GNULIB): Replace $(top_srcdir) with
	$(top_builddir).

2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/hashsum.c (aliases): Add sha1sum alias.
	(GRUB_MOD_INIT): Register sha1sum command.
	(GRUB_MOD_FINI): Unregister sha1sum command.

2010-09-21  Yves Blusseau  <blusseau@zetam.org>

	Keep boot and grub directory names in sync with utils scripts

	* configure.ac: Define GRUB_BOOT_DIR_NAME and GRUB_DIR_NAME macros.
	* config.h.in: Add previous macros.
	* include/grub/emu/misc.h (DEFAULT_DIRECTORY): Use previous macros.